Trying to fix image backgrounds on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ p {
 
 body {
     width: 100vw;
+    height: 100vh;
     background-color: #fff;
     color: #555;
     font-family: Merriweather;
@@ -72,21 +73,27 @@ body {
 
 .parallax {
     width: 100%;
-    height: 100vh;
-}
-
-.parallax#portfolio{    
-        background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/cliffside.jpg');
-        background-attachment: fixed;
-        background-position: top;
-        background-repeat: no-repeat;
-        background-size: cover;
+    height: 100%;
 }
 .parallax#home{
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/goldengate.jpg');
     background-attachment: fixed;
     background-position: top;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
+    background-size: cover;
+}
+.parallax#portfolio{    
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/cliffside.jpg');
+    background-attachment: fixed;
+    background-position: top;
+    /* background-repeat: no-repeat; */
+    background-size: cover;
+}
+.parallax#rest{
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/pieratsunset.jpg');
+    background-attachment: fixed;
+    background-position: top;
+    /* background-repeat: no-repeat; */
     background-size: cover;
 }
 
@@ -114,6 +121,7 @@ body {
     justify-content: flex-start;
     margin: 1% 5%;
 }
+
 
 #contact-me ul{
     list-style-type: none;
